Make prompt editor working.
