# freechat-sdk/typescript/apis/PromptApi.ts
@@ -534,6 +534,44 @@ export class PromptApiRequestFactory extends BaseAPIRequestFactory {
     }
 
     /**
+     * Check if the name already exists.
+     * Check If Name Exists
+     * @param name Name
+     */
+    public async existsName(name: string, _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'name' is not null or undefined
+        if (name === null || name === undefined) {
+            throw new RequiredError("PromptApi", "existsName", "name");
+        }
+
+
+        // Path Params
+        const localVarPath = '/api/v1/prompt/exists/name/{name}'
+            .replace('{' + 'name' + '}', encodeURIComponent(String(name)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.GET);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
+
+
+        let authMethod: SecurityAuthentication | undefined;
+        // Apply auth methods
+        authMethod = _config.authMethods["bearerAuth"]
+        if (authMethod?.applySecurityAuthentication) {
+            await authMethod?.applySecurityAuthentication(requestContext);
+        }
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
+    /**
      * Get prompt detailed information.
      * Get Prompt Details
      * @param promptId PromptId to be obtained
@@ -1258,6 +1296,35 @@ export class PromptApiResponseProcessor {
                 ObjectSerializer.parse(await response.body.text(), contentType),
                 "Array<string>", ""
             ) as Array<string>;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        throw new ApiException<string | Blob | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to existsName
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async existsNameWithHttpInfo(response: ResponseContext): Promise<HttpInfo<boolean >> {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            const body: boolean = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "boolean", ""
+            ) as boolean;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: boolean = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "boolean", ""
+            ) as boolean;
             return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
         }
 
